--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This is a hash router for vanilla JavaScript for SPA.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --hot",
+    "build": "webpack --progress --profile",
+    "development": "webpack serve --env development",
+    "production": "webpack --progress --profile --mode production"
   },
   "repository": {
     "type": "git",
@@ -16,9 +19,19 @@
     "url": "https://github.com/whoiseon/axe-hash-router/issues"
   },
   "homepage": "https://github.com/whoiseon/axe-hash-router#readme",
-  "dependencies": {
+  "devDependencies": {
     "@types/node": "^20.3.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "ts-loader": "^9.4.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "path-to-regexp": "^6.2.1",
+    "prettier": "^2.8.8"
   }
 }
